# collabot_do

./: 0926.txt  CMakeLists.txt  a_collabot_ver1.launch  a_collabot_ver2.launch  a_study2.launch  c_collabot_ver2.launch  collabot_do.launch  collabot_do_test.launch  collabot_ver2.launch  config  mainpage.dox  manifest.xml  package.xml  run_demo.launch  run_optical_flow.launch  run_ssim.launch  ssim.launch  testrun.sh
arduino/MotorControl/: BookcaseReader.cpp  BookcaseReader.h  MotorControl.ino
cfg/: collabot_do.cfg
scripts/: l_ssim.py  run.py  turtlebot3_m5_edit.py
src/: ac_pub_az_sub2.py  collabot_study23.py  exp_2_sceinaro_make.py  l_ssim.py  print_monitor.py  run.py  ssim.py
src/moter_publish_ver2/: moter_publish_ver2.ino
src/motor_publish_delay/: motor_publish_delay.ino
src/motor_publish_do/: BookcaseReader.cpp  BookcaseReader.h  motor_publish_do.ino  motor_publish_do2.ino
srv/: call_ssim.srv
utils/: ROI.json  get_ROI.py  ssim_graph.py
vision/: detect_book_state.py  detect_drawer.py  testcam.py
